[ADD] bootstrap-products

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Productos</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div id="app"></div>
     </div>
     <script type="module" src="/src/main.js"></script>
